frontend/minikube/templates/internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: frontend

spec:
  rules:
  - host: trg.shop.demo
    http: 
      paths:
      - backend:
          service: 
            name: frontend
            port:
              number: 80
        path: /
        pathType: Prefix
